--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
   "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=prod node server.js",
-    "start:dev": "cross-env NODE_ENV=dev nodemon -L server.js",
+    "start:dev": "cross-env NODE_ENV=dev nodemon -V server.js",
     "start:debug": "cross-env DEBUG=* NODE_ENV=dev nodemon --inspect server.js",
     "test": "cross-env NODE_ENV=test nodemon --exec \"mocha --recursive -R min\"",
     "test:debug": "cross-env DEBUG=* NODE_ENV=test nodemon --exec \"mocha --recursive -R min\""
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/logs/**",
+      "**/package.json",
+      "**/readme.md",
+      "**/yarn.lock",
+      "**/package-json.lock",
+      "**/node_modules/**"
+    ],
+    "ext": "js"
   },
   "repository": {
     "type": "git",
